fix(subheading): improve readability

--- a/src/components/about/style.scss
+++ b/src/components/about/style.scss
@@ -4,4 +4,8 @@
 	> *:not(:last-child) {
 		margin-bottom: em($spacing_100);
 	}
+
+	&_subheading {
+		text-transform: uppercase;
+	}
 }
