--- a/src/components/hero/style.scss
+++ b/src/components/hero/style.scss
@@ -20,4 +20,8 @@
 	> *:not(:last-child) {
 		margin-bottom: em($spacing_100);
 	}
+
+	&_subheading {
+		text-transform: uppercase;
+	}
 }
